--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-v4:23.4.0'
 }
+
 
 repositories {
     mavenCentral()
