--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailActivity"
+            android:name=".MovieDetailActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".SettingsActivity"
