--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.4.0'
+    compile "com.android.support:recyclerview-v7:23.0.1"
 }
-
-
 
 repositories {
     mavenCentral()
