--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.4.0'
     compile "com.android.support:recyclerview-v7:23.0.1"
+    compile project(":volley")
 }
 
 repositories {
