Fix MoviesProvider functions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <provider
             android:authorities="com.example.julia.popularmovies"
-            android:name=".data.MovieProvider" />
+            android:name=".data.MoviesProvider" />
     </application>
 
 </manifest>
