--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.facebook.stetho:stetho:1.4.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
