--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DesignDemo">
+        android:theme="@style/Theme.DesignPopularMovies">
         <activity android:name=".MovieGridActivity"
             android:label="@string/app_name">
             <intent-filter>
